// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`symbolServerUrl will allow a a subdirectory path on an allowed https host 1`] = `Array []`;

exports[`symbolServerUrl will allow an allowed https host 1`] = `Array []`;

exports[`symbolServerUrl will error when switching to an allowed but non-https host 1`] = `
Array [
  Array [
    "HTTPS is required for non-localhost symbol servers. Rejecting http://symbolication.services.mozilla.com/ and defaulting to https://mozilla.symbols.samplyprofiler.com.",
  ],
]
`;

exports[`symbolServerUrl will error when switching to an invalid host 1`] = `
Array [
  Array [
    "The symbol server URL was not valid. Rejecting invalid and defaulting to https://mozilla.symbols.samplyprofiler.com.",
    [TypeError: Invalid URL: invalid],
  ],
]
`;

exports[`symbolServerUrl will error when switching to an unknown host 1`] = `
Array [
  Array [
    "The symbol server URL was not in the list of allowed domains. Rejecting https://symbolication.services.mozilla.com.example.com/symbols and defaulting to https://mozilla.symbols.samplyprofiler.com.",
  ],
]
`;

exports[`symbolServerUrl will strip the trailing slash on an allowed https host 1`] = `Array []`;
